assets/css/style.css
/* ... */
.sidebar-contact h2 {
	margin: 0 0 15px;
	padding: 0;
	color: #C69651;
	text-transform: uppercase;
	text-align: center;
	font-size: 25px;
}

textarea {
	height: 60px;
	resize: none;
	width: 100%;
	border-top: 0;
	border-left: 0;
	border-right: 0;
}

.sidebar-contact textarea,
#popup-modalForm textarea {
	margin-bottom: 0;
}

.sidebar-contact buuto[type=submit] {
	background: #ca9d75;
	border: 1px solid #ca9d75;
	color: #fff;
	cursor: pointer;
	font-size: 18px;
	height: auto;
	padding: 10px;
	-webkit-transition: all .2s linear;
	transition: all .2s linear
}

.sidebar-contact input[type=submit]:focus,
.sidebar-contact input[type=submit]:hover {
	background-color: transparent;
	color: #ca9d75;
	-webkit-box-shadow: none;
	box-shadow: none
}

.form-check .form-check-input {
	width: 15px;
	height: 15px;
}

.toggle.active {
	height: 35px;
	width: 35px;
	line-height: 35px;
	top: 0;
	left: -35px;
}

.toggle {
	background: #63401a;
}

.toggle {
	position: absolute;
	height: 35px;
	width: 160px;
	text-align: center;
	cursor: pointer;
	background: #C69651;
	top: 58px;
	left: -98px;
	line-height: 36px;
	-webkit-transition: all .2s;
	transition: all .2s;
	-webkit-transform: rotate(90deg);
	transform: rotate(90deg);
	-webkit-box-shadow: 0 3px 6px rgb(0 0 0 / 16%), 0 3px 6px rgb(0 0 0 / 23%);
	box-shadow: 0 3px 6px rgb(0 0 0 / 16%), 0 3px 6px rgb(0 0 0 / 23%);
	color: #000;
}

.toggle.active:before {
	position: absolute;
	content: 'X';
	-webkit-transform: rotate(90deg);
	transform: rotate(90deg);
	/* top: -2px; */
	left: 37%;
}

.toggle.active:before {
	content: 'X';
}

.toggle:before {
	content: 'Enquire Now';
	font-size: 14px;
	color: #fff;
	text-transform: uppercase;
	font-weight: 500;
	letter-spacing: 1px;
}

.toggle:hover {
	background-color: #000;
}

/*************************************** SIDEBAR FORM CSS ************************************/

/*************************************** overviewContent ************************************/

.overviewContent {
	margin-bottom: 50px;
}

.overviewImgBoxWrapper .col-md-3:nth-child(even) {
	transform: translateY(45px);
}

/*************************************** gallerySlider ************************************/

.gallerySlider {
	overflow: hidden;
}

.gallerySlider .slick-slide img {
	width: 100%;
}

.gallerySlider .slick-list {
	margin: 0 -100px;
	padding: 50px 0 !important;
}

.gallerySlider .slick-slide {
	transform-origin: center;
	transform: scale(0.7);
	transition: all 0.2s linear;
}

.gallerySlider .slick-slide.slick-center {
	transform: scale(1);
}

.itemBox:after {
	content: '';
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	background-color: rgba(0, 0, 0, 0.7);
	transition: all 0.2s linear;
}

.playButton {
	position: absolute;
	top: 50%;
	left: 50%;
	transform: translate(-50%, -50%);
	z-index: 2;
}

.gallerySlider .slick-slide.slick-center .itemBox:after {
	opacity: 0;
}

.itemBoxContent {
	position: absolute;
	bottom: -50px;
	right: -50px;
	padding: 30px 40px;
	background-color: #c69651;
	width: 80%;
	color: #fff;
	opacity: 0;
	transition: all 0.2s linear;
}

.gallerySlider .slick-slide.slick-center .itemBoxContent {
	opacity: 1;
}

.itemBoxContent h3 {
	font-family: 'Playfair Display', serif;
	font-size: 26px;
}

.itemBoxContent p {
	font-size: 14px;
	margin: 0;
}

/*************************************** touristDestination ************************************/

.touristDestination .commonHeading h2 {
	font-size: 36px;
}

.parent {
	display: grid;
	grid-template-columns: repeat(3, 1fr);
	grid-template-rows: repeat(5, 1fr);
	grid-column-gap: 15px;
	grid-row-gap: 15px;
}

.div1 {
	grid-area: 1 / 1 / 4 / 2;
}

.div2 {
	grid-area: 4 / 1 / 6 / 2;
}

.div3 {
	grid-area: 1 / 2 / 6 / 3;
}

.div4 {
	grid-area: 1 / 3 / 3 / 4;
}

.div5 {
	grid-area: 3 / 3 / 6 / 4;
}

.tours {
	position: relative;
	overflow: hidden;
}

.tours img {
	height: 100%;
	object-fit: cover;
	transition: all 0.3s linear;
}

.tours:hover img {
	transform: scale(1.2);
}

.toursContent {
	position: absolute;
	bottom: 10px;
	text-align: center;
	width: 100%;
	box-sizing: border-box;
	padding: 0 10px;
}

.toursContent p {
	font-weight: 600;
	margin-bottom: 0;
	color: #fff;
}

.counterBox h3 {
	font-size: 40px;
	font-weight: 700;
	color: #C69651;
}

.counterBox p {}

/**** commonLayout ***/

.smallImgWrapper {
	flex-wrap: wrap;
}

.smallImgWrapper .img {
	flex: 1;
}

.commonLayoutContent {
	margin-top: 15px;
	padding: 30px 10px 30px 50px;
	background-color: #C69651;
	color: #fff;
}

.commonLayoutContent p:last-child {
	margin-bottom: 0;
}

.commonLayoutContent.right {
	padding: 50px 0px 50px 60px;
}

.commonLayoutContent.left {
	padding: 50px 30px 50px 0px;
}

.commonLayout .col-lg-6 {
	padding: 0 5px;
}

.commonLayoutContent.right:after,
.commonLayoutContent.left:after {
	content: '';
	position: absolute;
	width: 41px;
	height: 100%;
	background-color: #C69651;
	right: -40px;
	top: 0;
}

.commonLayoutContent.left:after {
	right: auto;
	left: -40px;
}

.commonLayoutContent h2 {
	color: #fff;
	font-size: 26px;
	margin-bottom: 20px;
	font-weight: 700;
}

.commonLayoutContent p {
	font-size: 14px;
}

.stickyIcons {
	bottom: 25%;
	right: 0;
	display: flex;
	flex-direction: column;
	gap: 15px;
}

.stickyIcons a {
	box-shadow: 1px 2px 14px rgba(0, 0, 0, 0.8);
	border-radius: 50%;
}

.stickyIcons a img {
	width: 40px;
}

.broucheureButton a {}

